--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           </button>
         </div>
       </div>
+      <div class="count text-center m-auto mt-3"></div>
       <div class="card mt-3 m-auto align-items-center">
         <div class="suit-icon align-self-start"></div>
         <div class="card-num"></div>
