--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,21 @@
   <body>
     <div class="container">
       <div class="input mt-3 m-auto d-flex justify-content-between">
-        <div class="form-group d-flex flex-column">
-          <input
-            type="text"
-            name="cardWidthInput"
-            id="cardWidthInput"
-            placeholder="width (in rem's)"
-          />
-        </div>
-        <div class="form-group align-self-end">
+        <input
+          type="text"
+          name="cardWidthInput"
+          id="cardWidthInput"
+          placeholder="width (in rem's)"
+        />
+        <div class="form-group">
           <button class="btn btn-secondary" id="genCardBtn">
             Generate Card
           </button>
         </div>
       </div>
-      <div class="count text-center m-auto mt-3"></div>
+      <div class="counter text-center m-auto mt-3">
+        Generating random card in <span class="count"></span> seconds
+      </div>
       <div class="card mt-3 m-auto align-items-center">
         <div class="suit-icon align-self-start"></div>
         <div class="card-num"></div>
