added options for A, J, K Q cards

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <div class="card mt-3 m-auto align-items-center">
         <div class="suit-icon align-self-start"></div>
         <div class="card-num"></div>
-        <div class="suit-icon align-self-end"></div>
+        <div class="suit-icon align-self-end suit-flip"></div>
       </div>
     </div>
   </body>
